# FluidSim

./: README.md  audio.py  fluid.py  main.py  pyproject.toml  requirements.txt  settings.py  ui.py  visuals.py
